--- a/src/index_App2.css
+++ b/src/index_App2.css
@@ -24,7 +24,9 @@ main{
 }
 .key
 {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
     width: 30px;
     height: 30px;
     text-align: center;
@@ -32,4 +34,25 @@ main{
     border-radius: 10px;
     margin: 10px;
     background-color: white;
+}
+.space{
+    width: 141px;
+    height: 30px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 10px;
+    background-color: white;
+    font-size: 25px;
+}
+.delete{
+    width: 30px;
+    height: 30px;
+    gap: 60px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 10px;
+    background-color: white;
+    
 }
