--- a/src/index_App2.css
+++ b/src/index_App2.css
@@ -19,7 +19,7 @@ main {
     height: 200px;
     margin: 10px;
     background-color: rgb(231, 241, 241);
-    border-radius: 5%;
+    /* border-radius: 5%; */
 }
 
 .keyboard {
@@ -78,7 +78,7 @@ main {
     background-color: rgb(245, 188, 188);
 }
 
-.language-toggle {
+.language-toggle, .color-toggle {
     font-size: 23px;
     width: 80px;
     height: 30px;
@@ -87,6 +87,7 @@ main {
     border-radius: 10px;
     background-color: rgb(188, 188, 223);
 }
+
 
 .clearButton {
     font-size: 23px;
