--- a/src/style/gameStyle.css
+++ b/src/style/gameStyle.css
@@ -1,9 +1,14 @@
+body {
+    background-color: rgb(196, 229, 229);
+}
 .buttonsContainer {
+    text-align: center;
+    justify-content: center;
     display: flex;
-    justify-content: space-between;
-    width: 500px;
-    height: 150px;
-    
+    margin: 40px 0px 70px 0px;
+    user-select: none;
+    cursor: pointer;
+
 }
 
 .playerButton {
@@ -14,17 +19,33 @@
     border-radius: 50%;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
+    margin: 20px;
 }
-.gameContainer{
-    display: grid;
+
+.gameContainer {
+    display: flex;
     gap: 30px;
     grid-template-columns: repeat(2,300px);
+    justify-content: center;
+    align-items: center;
 }
-.player{
+
+.player {
     width: 300px;
     height: 350px;
-    
-    background-color: rgb(60, 197, 127);
+    border-radius: 5%;
+    background-color: rgb(82, 195, 137);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    text-align: center;
+    overflow: auto;
+}
+
+.plus, .minus, .multiply, .division {
+    width: 50px;
+    height: 30px;
+    border-radius: 15%;
+    margin: 4px;
 }
