--- a/src/style/gameStyle.css
+++ b/src/style/gameStyle.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(196, 229, 229);
 }
+
 .buttonsContainer {
     text-align: center;
     justify-content: center;
@@ -8,7 +9,6 @@ body {
     margin: 40px 0px 70px 0px;
     user-select: none;
     cursor: pointer;
-
 }
 
 .playerButton {
@@ -48,4 +48,41 @@ body {
     height: 30px;
     border-radius: 15%;
     margin: 4px;
+}
+
+.prevShowContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.prevShow {
+    text-align: center;
+    width: 100px;
+    height: 70px;
+    border: 1px solid black;
+}
+
+.registerContainer {
+    display: flex;
+    position: relative;
+}
+
+.input {
+    width: 190px;
+    height: 45px;
+    font-size: large;
+}
+
+.submitButton {
+    
+}
+
+.startTheGame {
+    position: absolute;
+    right: 30px;
+    border: 3px solid black;
+    display: inline-block;
+    font-size: larger;
+
 }
