--- a/src/style/gameStyle.css
+++ b/src/style/gameStyle.css
@@ -1,6 +1,5 @@
 body {
-    background-color: rgb(196, 229, 229);
-
+    background-color: rgb(1, 65, 65);
 }
 
 .buttonsContainer {
@@ -35,9 +34,11 @@ body {
 
 .player {
     width: 300px;
-    height: 350px;
+    height: 400px;
+    border: 0.5px solid;
+    border-color: rgb(167, 165, 165);
     border-radius: 5%;
-    background-color: rgb(82, 195, 137);
+    background-color: rgb(171, 219, 238);
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
     text-align: center;
@@ -151,4 +152,8 @@ h3 p {
 }
 .win{
     display: inline;
+}
+
+.quitButton {
+   color: #000; 
 }
