--- a/src/style/AppComputer.css
+++ b/src/style/AppComputer.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    user-select: none;
   }
   
   main {
@@ -65,12 +66,12 @@ body {
   
   .space {
     font-size: 23px;
-    width: 180px;
+    width: 665px;
     height: 40px;
     text-align: center;
     border: 1px solid black;
     border-radius: 10px;
-    background-color: white;
+    background-color: rgb(230, 228, 228);
   }
   
   .space:active {
@@ -84,11 +85,11 @@ body {
   
   .delete {
     font-size: 23px;
-    width: 110px;
+    width: 130px;
     height: 30px;
     text-align: center;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 7px;
     background-color: rgb(245, 188, 188);
   }
   
@@ -103,11 +104,11 @@ body {
   
   .language-toggle {
     font-size: 23px;
-    width: 110px;
+    width: 130px;
     height: 30px;
     text-align: center;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 7px;
   }
   
   .language-toggle:active {
@@ -121,30 +122,49 @@ body {
   
   .color-toggle {
     font-size: 23px;
-    width: 110px;
+    width: 130px;
     height: 30px;
     text-align: center;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 7px;
     background-color: rgb(245, 188, 188);
   }
   
   .color-toggle:active {
     transform: translateY(2px);
   }
-  
+
   .color-toggle:hover {
     background-color: rgb(145, 137, 137);
     color: rgb(194, 16, 16);
   }
   
-  .clearButton {
+  .blue-toggle {
     font-size: 23px;
-    width: 110px;
+    width: 130px;
     height: 30px;
     text-align: center;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 7px;
+    background-color: rgb(127, 127, 210)
+  }
+
+  .blue-toggle:active {
+    transform: translateY(2px);
+  }
+
+  .blue-toggle:hover {
+    background-color: rgb(145, 137, 137);
+    color: rgb(56, 56, 164)
+  }
+  
+  .clearButton {
+    font-size: 23px;
+    width: 130px;
+    height: 32px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 7px;
     background-color: rgb(211, 230, 212);
   }
   
@@ -156,6 +176,11 @@ body {
     background-color: rgb(145, 137, 137);
     color: rgb(211, 230, 212);
   }
+
   .red{
+    color: blue;
+  }
+
+  .blue{
     color: blue;
   }
