--- a/src/style/gameStyle.css
+++ b/src/style/gameStyle.css
@@ -1,20 +1,20 @@
-.swichContainer{
+.swichContainer {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
-    
-
 }
 
-.enterButton{
+.enterButton {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
+    font-size: 25px;
+    width: 300px;
     height: 50px;
     background-color: rgb(141, 219, 247);
     border-radius: 5%;
 }
+
 body {
     background-color: rgb(1, 65, 65);
 }
@@ -52,7 +52,7 @@ header {
     grid-template-columns: repeat(2, 300px);
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .player {
@@ -140,8 +140,6 @@ header {
     font-size: larger;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
-    /* width: 200px;
-    height: 50px; */
     font-size: 30px;
     margin: 50px 0px 50px 0px;
     color: rgb(125, 124, 124);
@@ -202,6 +200,6 @@ h3 p {
 }
 
 .quitButton:hover {
-    background-color: rgb(124, 152, 152);;
+    background-color: rgb(124, 152, 152);
     color: rgb(1, 65, 65);
 }
